--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,19 @@
 Top Logo
 *****************************/
 
-.svg {
+.main-logo {
 background-color: aliceblue;
 text-align: center;
-    
 }
 
 /*********************************
 Header
 *****************************/
-
+.main-nav {
+ text-align: center;
+border: aliceblue;
+list-style: none;
+}
 
 
 
@@ -26,22 +29,28 @@ text-align: center;
 border-top: 0px;
     }
 
-.design {
+.container  {
+font-family: 'Merriweather', serif;    
+font-size: 30px;
+text-shadow: 4px 4px 4px #aaa;   
 text-align: center;
-margin:auto;
-border: 3px alice;
+margin: auto;
+border: 3px aliceblue;
 padding: 15px;
 height: auto;
 width: auto;
 border: 10px;
-border-style:solid;
-border-color: aliceblue;    
+border-style: solid;
+border-color: aliceblue;
+background-color: gainsboro;
 }
+
+
 
 body {
-font-family: font-family: 'Merriweather', serif;    
-font-size: 30px;
-text-shadow: 4px 4px 4px #aaa   
+font-family: 'Merriweather', serif;    
+font-size: 20px;
+text-shadow: 4px 4px 4px #aaa;   
 text-align: center;
 margin:auto;
 border: 3px aliceblue;
@@ -50,34 +59,12 @@ height: auto;
 width: auto;
 border: 10px;
 border-style:solid;
-border-color: aliceblue;    
+border-color: aliceblue;
+background-color: gainsboro;
 }
 
-
-
-
-
-
-
-.design {
-text-align: center;
-margin:auto;
-border: 3px aliceblue;
-padding: 15px;
-height: auto;
-width: auto;
-border: 10px;
-border-style:solid;
-border-color: aliceblue;    
-    
-}
-
-
-.container {
-text-align: center;
-background-color: aliceblue;
-    
-    
+input {
+    margin: 8px;
 }
 
 
@@ -88,7 +75,6 @@ ul {
     margin: 5px;
     padding: 5px;
 }
-
 
 
 .logo {
@@ -108,9 +94,9 @@ Partnerships
 *****************************/
 .partnerships {
 text-align: center;
-margin:auto;
+margin: auto;
 border: 3px aliceblue;
-padding: 10px;
+padding: 15px;
 height: auto;
 width: auto;
 border: 10px;
@@ -118,15 +104,23 @@ border-style:solid;
 border-color: aliceblue
 }
 
-
+.partnershiplogo {
+width: 400px;
+height: 200px;
+ margin-top: 20px;   
+    
+    
+    
+}
 
 
 
 /*********************************
 Contact Page
 *****************************/
-
-
+    form {
+        color: aliceblue
+    }
 
 
 
@@ -140,13 +134,51 @@ footer {
  text-align: center;
 background-color: aliceblue;   
 }
-/*********************************
-Footer
-*****************************/
+
 
 /*********************************
 Media Queries
 *****************************/
+@media screen and (min-width: 320px){
+  
+    
+}
+    
+        
+ @media screen and (min-width: 480px){
+    
+    
+}       
+    
+    
+@media screen and (min-width: 720px){
+ 
+    
+    nav li {
+        display: inline;
+       font-size: 150%;
+        padding: 0 10px;
+        
+        
+    }  
+}
+
+
+@media screen and (min-width: 960px){
+    
+    } 
+        
+    
+
+
+
+
+
+
+
+
+
+
 
 
 
