--- a/css/style.css
+++ b/css/style.css
@@ -126,20 +126,30 @@ background-color: aliceblue;
 /*********************************
 Media Queries
 *****************************/
-@media screen and (min-width: 320px){
-  
+@media screen and (min-width: 576px){
+   .mainlogo{
+      float: left;  
+        
+    }
     
 }
     
         
- @media screen and (min-width: 480px){
-    
+ @media screen and (min-width: 768px){
+    .mainlogo{
+      float: left;  
+        
+    } 
     
 }       
     
     
-@media screen and (min-width: 720px){
- 
+@media screen and (min-width: 992px){
+
+    .mainlogo{
+      float: left;  
+        
+    }
     
     nav li {
         display: inline;
@@ -151,17 +161,12 @@ Media Queries
 }
 
 
-@media screen and (min-width: 960px){
+@media screen and (min-width: 1200px){
     
     } 
         
     
 
-@media screen and (min-width: 1200 ){
-    
-    
-    
-    }
 
 
 
