--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ height: auto;
 padding-top: 10px;
 padding-bottom: 10px;
 text-align: center;
+width: 400px;
+height: 80px;
 }
 
 /*********************************
@@ -24,6 +26,9 @@ Header
  text-align: center;
 border: aliceblue;
 list-style: none;
+height: 80px;
+padding-top: 10px;
+padding-bottom: 10px;
 }
 
 
@@ -38,7 +43,7 @@ text-align: center;
 border-top: 0px;
     }
 
-.main-content {
+.main-content  {
 font-family: 'Merriweather', serif;    
 font-size: 30px;
 text-shadow: 4px 4px 4px #aaa;   
@@ -102,10 +107,6 @@ border-color: aliceblue
 
 
 
-
-
-
-
 /*********************************
 Contact Page
 *****************************/
@@ -147,7 +148,10 @@ Media Queries
     
 @media screen and (min-width: 992px){
 
-   
+    .main-logo {
+      float: left;  
+        
+    }
     
     nav li {
         display: inline;
