Made some improvements to Footer on Conatact Page

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+body {
+ min-height: 95vh;
+ display: flex;
+ flex-direction: column;
+ justify-content: space-between;
+    
+    
+}
+
 header {
  display: flex;
  flex-direction: column;
